# ChangeLog for games-emulation/yabause
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/yabause/ChangeLog,v 1.27 2008/08/31 22:03:26 nyhm Exp $

*yabause-0.9.7 (31 Aug 2008)

  31 Aug 2008; Tristan Heaven <nyhm@gentoo.org> +yabause-0.9.7.ebuild:
  Version bump

*yabause-0.9.6 (30 Jun 2008)

  30 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +yabause-0.9.6.ebuild:
  version bump

*yabause-0.9.5 (11 May 2008)

  11 May 2008; Tristan Heaven <nyhm@gentoo.org> +yabause-0.9.5.ebuild:
  Version bump

*yabause-0.9.4 (08 May 2008)

  08 May 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/yabause-0.9.4-build.patch, +yabause-0.9.4.ebuild:
  Version bump, bug #214712

*yabause-0.9.3 (20 Jan 2008)

  20 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +yabause-0.9.3.ebuild:
  version bump

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing dholm from metadata.xml as per #24623.

*yabause-0.9.2 (17 Dec 2007)

  17 Dec 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +yabause-0.9.2.ebuild:
  version bump

*yabause-0.9.1 (06 Nov 2007)

  06 Nov 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +yabause-0.9.1.ebuild:
  version bump

*yabause-0.9.0 (25 Sep 2007)

  25 Sep 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +yabause-0.9.0.ebuild:
  version bump

*yabause-0.8.6 (19 Aug 2007)

  19 Aug 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +yabause-0.8.6.ebuild:
  version bump

*yabause-0.8.5 (29 Jun 2007)

  29 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +yabause-0.8.5.ebuild:
  Version bump

  29 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -yabause-0.7.2.ebuild, yabause-0.8.0.ebuild:
  sync up keywords that were dropped accidentally; stable for x86; clean out old
  version for bug #172602

  25 Dec 2006; Mike Doty <kingtaco@gentoo.org> yabause-0.7.2.ebuild:
  ~amd64 added

*yabause-0.8.0 (24 Dec 2006)
