@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST yabause-0.8.0.tar.gz 503573 RMD160 3c4b39bd27cf41c3c265119c6a8c2ce961699b0f SHA1 f5c2a593dfd4eea429c1e2f35563965b044c423b SHA256 fe6d5141bb4b453f6717aec7a6e0823fb072a8a76b30a379810f084b95377cc2
 DIST yabause-0.9.7.tar.gz 1072203 RMD160 49a4643b39fc2c9f5a76550b03c7277493143edd SHA1 a86a7f5bc4727e402e4f76918e6abf4c9a07f3fa SHA256 b635c855d3c219e2a76cc3cc3622042c042e6acd847776d3a674cda5b34a8ff0
+DIST yabause-0.9.8.tar.gz 1101855 RMD160 9917142d6a515036dfdcdaa383a099f4d720b0af SHA1 246e33677d85b7a88a5e3c7383e77f5da0d38ed6 SHA256 892d5d1445e98d9d8936b60a5218ad8688fb105cb0b3fef932986a2ac9fd7597
 EBUILD yabause-0.8.0.ebuild 943 RMD160 d5b2df87dca0857dcf910fd02ec42739f3748adc SHA1 047e82fb0d3d7437e39b89f4df18ef093924e80c SHA256 d7d6bde93f1658b0b8b79bf361d3ce65e52201504ae8db0a97cb4cdb152dab6d
 EBUILD yabause-0.9.7.ebuild 886 RMD160 4d951e29a741587959864d7714c48a2e0d5644c5 SHA1 34b12a579febbda634e3fd335ea18dda4ea8346a SHA256 69f108eae9cf1a4ae9bdbf0ef66004b78e6e784269e85e34f2a270445a85520d
-MISC ChangeLog 3493 RMD160 c101ba2f4e91ebe200dc8ebb14d9a2fe5c59f212 SHA1 c03845bc80fa971febb5d8c293a71938aa07183e SHA256 7fdeb260599f73b7313f41326862ad152e89dfa85d75953913411ece4b0be518
+EBUILD yabause-0.9.8.ebuild 886 RMD160 d95db9f42bbad718e567dc9927ef45f8dbf26bff SHA1 1bae13a495c430b6bf858242388a226203822561 SHA256 051a90b395ebf1bc6eeecf28932d3c10097be0c742db4a817165f46f8e97ffac
+MISC ChangeLog 3610 RMD160 ccaf99f2c511a2ee84bf6de426b9c70341cc23b0 SHA1 31cabf1ecf3031b0769dd3058218ebac24c15884 SHA256 07255f7892966a95c9a1dc85b63670fafb302dce59b46bfd7451e9f06e07c112
 MISC metadata.xml 159 RMD160 9ce79fb2f245a86f0fd9896ef34c65b6dc2a97bf SHA1 e8d4e28f664e8bd524cb04b5077852adc2f57d90 SHA256 a222ada7640e6dfb21d27151813829e91a72a6878d809dfddaa41581455f6b69
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkkzNOIACgkQdz7hIScOURHCEQCdGOCiTXdExu0WlyHBcMymbrLL
+398An0N0xeC7K+zanqBxFX8rDOXt3l0w
+=rBep
+-----END PGP SIGNATURE-----
